--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap" rel="stylesheet"> <!-- Site google fonts link -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css"> 
+
+  <!-- Scripts de bootstrap -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+
   <title>Sunnyside agency landing page</title>
 </head>
 <body>
@@ -142,34 +148,43 @@
   </section>
 
   <!-- Picture Gallery starts here -->
-  <div class="slider">
-    <div class="slide-track">
-        <div class="slide">
-          <picture>
-            <source media=(max-width: 375px) srcset="images/mobile/image-gallery-milkbottles.jpg">
-            <img src="images/desktop/image-gallery-milkbottles.jpg" alt="milk bottle">
-          </picture>
-        </div>
-        <div class="slide">
-          <picture>
-            <source media=(max-width: 375px) srcset="images/mobile/image-gallery-orange.jpg">
-            <img src="images/desktop/image-gallery-orange.jpg" alt="orange">
-          </picture>
-        </div>
-        <div class="slide">
-          <picture>
-            <source media=(max-width: 375px) srcset="images/mobile/image-gallery-cone.jpg">
-            <img src="images/desktop/image-gallery-cone.jpg" alt="ice cream cone">
-          </picture>
-        </div>
-        <div class="slide">
-          <picture>
-            <source media=(max-width: 375px) srcset="images/mobile/image-gallery-sugarcubes.jpg">
-            <img src="images/desktop/image-gallery-sugarcubes.jpg" alt="sugar cubes">
-          </picture>
-        </div>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicadores -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+  
+    <!-- Contenedor de las diapositivas -->
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="images/desktop/image-gallery-milkbottles.jpg" alt="Milk Bottles">
+      </div>
+      <div class="carousel-item">
+        <img src="images/desktop/image-gallery-orange.jpg" alt="Orange">
+      </div>
+      <div class="carousel-item">
+        <img src="images/desktop/image-gallery-cone.jpg" alt="Ice Cream Cone">
+      </div>
+      <div class="carousel-item">
+        <img src="images/desktop/image-gallery-sugarcubes.jpg" alt="Sugar Cubes">
+      </div>
     </div>
+  
+    <!-- Controles izquierda y derecha -->
+    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
+  
+
 
   <!-- Footer starts here -->
   <footer>
