Refactored carousel and added titles to images

--- a/index.html
+++ b/index.html
@@ -160,18 +160,23 @@
     <!-- Contenedor de las diapositivas -->
     <div class="carousel-inner">
       <div class="carousel-item active">
+        <div class="carousel-title">Milk Bottles</div>
         <img src="images/desktop/image-gallery-milkbottles.jpg" alt="Milk Bottles">
       </div>
       <div class="carousel-item">
+        <div class="carousel-title">Orange</div>
         <img src="images/desktop/image-gallery-orange.jpg" alt="Orange">
       </div>
       <div class="carousel-item">
+        <div class="carousel-title">Ice Cream Cone</div>
         <img src="images/desktop/image-gallery-cone.jpg" alt="Ice Cream Cone">
       </div>
       <div class="carousel-item">
+        <div class="carousel-title">Sugar Cubes</div>
         <img src="images/desktop/image-gallery-sugarcubes.jpg" alt="Sugar Cubes">
       </div>
     </div>
+    
   
     <!-- Controles izquierda y derecha -->
     <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
